fixing footer spacing and hiding sidebar on mobile

--- a/assets/scss/objects/_comments.scss
+++ b/assets/scss/objects/_comments.scss
@@ -137,3 +137,8 @@
 .required {
   color: $highlight;
 }
+
+.logged-in-as a {
+  color: $base;
+  border-bottom: 2px solid $highlight;
+}
