--- a/assets/scss/objects/_footer.scss
+++ b/assets/scss/objects/_footer.scss
@@ -9,9 +9,14 @@
 }
 
 .site-footer__colophon {
-padding-top: 2.75em;
+  padding-top: 3em;
+@include bp(medium) {
+  padding-top: 2.5em;
+}
+
 }
 .site-footer__colophon p {
+  line-height: 1.45;
   font-family: $headline;
   color: darken($secondary,50%);
   text-align: center;
@@ -19,5 +24,4 @@ padding-top: 2.75em;
 }
 
 .site-footer__colophon p:first-child {
-  margin-bottom: .5em;
 }
